--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ application/core/lib/DB.class.php
 .idea/workspace.xml
 .idea/dictionaries/Arnold.xml
 .idea/workspace.xml
+application/core/lib/DB.class.php
